Production/force-app/main/default/objects/Activity/fields/Call_Stage__c.field-meta.xml
<CustomField>
    <fullName>Call_Stage__c</fullName>
    <defaultValue>&quot;Blank&quot;</defaultValue>
    <description>This field controls the Account Rating field.</description>
    <label>Vivotif Call Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Discussed__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Disease Education</fullName>
            </value>
            <value>
                <fullName>Product Introduction</fullName>
            </value>
            <value>
                <fullName>Product Message Accepted</fullName>
            </value>
            <value>
                <fullName>Overcoming Operations/Policy</fullName>
            </value>
            <value>
                <fullName>Initial Purchase</fullName>
            </value>
            <value>
                <fullName>Administered First Dose</fullName>
            </value>
            <value>
                <fullName>First Reorder</fullName>
            </value>
            <value>
                <fullName>Adopting</fullName>
            </value>
            <value>
                <fullName>Believer</fullName>
            </value>
            <value>
                <fullName>Closed/Not Viable</fullName>
            </value>
            <value>
                <fullName>Nurse Educator Clinical Program</fullName>
            </value>
            <value>
                <fullName>Disease/Product Introduction</fullName>
            </value>
            <value>
                <fullName>Meaningful Dialogue</fullName>
            </value>
            <value>
                <fullName>Objection Handling</fullName>
            </value>
            <value>
                <fullName>Commitment Gained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>