Production/force-app/main/default/objects/Activity/fields/Closed_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reasons__c</fullName>
    <defaultValue>&quot;Blank&quot;</defaultValue>
    <description>This field activates only when the Closed-Not Viable is selected.</description>
    <label>Closed Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not a travel vaccination outlet</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Closed Health facility</fullName>
            </value>
            <value>
                <fullName>Prescriber</fullName>
            </value>
            <value>
                <fullName>Pediatric facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>