Production/force-app/main/default/objects/Activity/fields/DaysRange__c.field-meta.xml
<CustomField>
    <fullName>DaysRange__c</fullName>
    <description>Number of activity date range -for reporting. It works along with daysSinceLastActvitiydate.</description>
    <formula>if( DaysSinceLastActivityDate__c &lt;=30,&quot;0-30&quot;,if( DaysSinceLastActivityDate__c &lt;= 60,&quot;31-60&quot;,if( DaysSinceLastActivityDate__c &lt;=90,&quot;61-90&quot;,if( DaysSinceLastActivityDate__c &lt;=120,&quot;91-120&quot;,&quot;120+&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting</inlineHelpText>
    <label>DaysRange</label>
    <type>Text</type>
</CustomField>