Production/force-app/main/default/objects/Activity/fields/isRecurTask__c.field-meta.xml
<CustomField>
    <fullName>isRecurTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRecurTask</label>
    <type>Checkbox</type>
</CustomField>