Production/force-app/main/default/objects/Activity/fields/Resources_Left__c.field-meta.xml
<CustomField>
    <fullName>Resources_Left__c</fullName>
    <label>Resources Left</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Discussed__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Vaxchora PI</fullName>
            </value>
            <value>
                <fullName>Vaxchora Flashcard</fullName>
            </value>
            <value>
                <fullName>MMWR Booklets</fullName>
            </value>
            <value>
                <fullName>Ali Booklets (Feb 2017)</fullName>
            </value>
            <value>
                <fullName>Vaxchora HCP Leave Behind</fullName>
            </value>
            <value>
                <fullName>(Chen) White Envelope</fullName>
            </value>
            <value>
                <fullName>(Herzog) White Envelope</fullName>
            </value>
            <value>
                <fullName>Vivotif PI</fullName>
            </value>
            <value>
                <fullName>Vivotif Patient Brochure</fullName>
            </value>
            <value>
                <fullName>Vivotif Pouchettes w/ PI</fullName>
            </value>
            <value>
                <fullName>Vivotif Dosing Admin Clingz</fullName>
            </value>
            <value>
                <fullName>Vivotif Leave Behind</fullName>
            </value>
            <value>
                <fullName>Vivotif Orange Refrigeration Stickers</fullName>
            </value>
            <value>
                <fullName>Vivotif Product Monograph</fullName>
            </value>
            <value>
                <fullName>Traveler’s Companion</fullName>
            </value>
            <value>
                <fullName>IDSA Guide</fullName>
            </value>
            <value>
                <fullName>Map (In-office poster)</fullName>
            </value>
            <value>
                <fullName>Vaxchora Patient Brochure w. QR Code</fullName>
            </value>
            <value>
                <fullName>Vaxchora Patient Brochure</fullName>
            </value>
            <value>
                <fullName>Unbranded Brochure</fullName>
            </value>
            <value>
                <fullName>Vaxchora Patient Profiler</fullName>
            </value>
            <value>
                <fullName>Discount Program – New Customers</fullName>
            </value>
            <value>
                <fullName>Discount Program – Existing Customers</fullName>
            </value>
            <value>
                <fullName>Discount Program – Pay in Full</fullName>
            </value>
            <value>
                <fullName>Vaxchora HCP Flashcard – 98 %</fullName>
            </value>
            <value>
                <fullName>Vaxchora HCP Flashcard – 8 million</fullName>
            </value>
            <value>
                <fullName>In-office Savings Cards (5x7)</fullName>
            </value>
            <value>
                <fullName>Vaxchora “2-8C” FAQ Flashcard</fullName>
            </value>
            <value>
                <fullName>Vaxchora “2-8” Reminder Cling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>