Production/force-app/main/default/objects/Activity/fields/TaskIdReference__c.field-meta.xml
<CustomField>
    <fullName>TaskIdReference__c</fullName>
    <label>TaskIdReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>