Production/force-app/main/default/objects/Activity/fields/Vaxchora_Call_Stage__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Call_Stage__c</fullName>
    <label>Vaxchora Call Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Discussed__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Disease/Product Introduction</fullName>
            </value>
            <value>
                <fullName>Meaningful Dialogue</fullName>
            </value>
            <value>
                <fullName>Objection Handling</fullName>
            </value>
            <value>
                <fullName>Commitment Gained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>